[metadata]
name = yodalib
version = attr: yodalib.__version__
url = https://github.com/binsync/yodalib
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
license = BSD 2 Clause
license_files = LICENSE
description = Your Only Decompiler API Lib - A generic API to script in and out of decompilers
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
   toml
   pycparser
   setuptools
   prompt_toolkit
   tqdm
   ghidra_bridge
   PySide6-Essentials>=6.4.2

python_requires = >= 3.6
include_package_data = True
packages = find:

[options.entry_points]
console_scripts =
    yodalib = yodalib.__main__:main

[options.extras_require]
test =
    angr-management
    pytest-qt
