[metadata]
name = bs_change_watcher
version = 0.0.0
url = https://github.com/binsync/libbs/tree/main/examples/change_watcher_plugin
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
license = BSD 2 Clause
description = An example plugin using LibBS to watch and report changes to artifacts
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
   libbs
   platformdirs

python_requires = >= 3.7
include_package_data = True
packages = find:

[options.entry_points]
console_scripts =
    bs_change_watcher = bs_change_watcher.__main__:main
